<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Results"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/grey"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_score"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/grey"
        android:textSize="30sp"
        android:layout_marginTop="60dp" />

    <Button
        android:id="@+id/tryAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_try_again"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/grey"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/ReturnToHome"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/poppins_medium"
        android:text="Return to Home"
        android:textColor="@color/black"
        android:textFontWeight="@integer/material_motion_duration_medium_2"
        android:textStyle="bold" />



</LinearLayout>